--- a/sass/_logosCategorias.scss
+++ b/sass/_logosCategorias.scss
@@ -1,9 +1,9 @@
 #categorias {
-    background-color: $colorFondo;
+    background-color: #F5F5F5;
     .text-center {
         background-color: $colorFondo;
-        color: $colorSecundario;
+        color: black;
         font-family: sans-serif;
-        font-size: 25px;
+        font-size: 15px;
 }
 }
